--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,26 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "echarts": "^5.5.1",
-    "element-plus": "^2.8.0",
-    "vue": "^3.4.37",
-    "vue-echarts": "^7.0.1"
+    "@tailwindcss/vite": "^4.0.11",
+    "element-plus": "^2.9.5",
+    "tailwindcss": "^4.0.11",
+    "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3"
   },
   "devDependencies": {
-    "@babel/types": "^7.18.10",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.9",
-    "typescript": "^4.6.4",
-    "unplugin-auto-import": "^0.18.2",
-    "unplugin-vue-components": "^0.27.3",
-    "vite": "^3.0.7",
-    "vue-tsc": "^1.8.27"
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
+    "typescript": "~5.7.2",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.2.4"
   }
 }
