feat:upload path with version tag to prevent r2 caching issues

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,4 +62,4 @@ jobs:
           source-dir: |
             build/bin/gf2gacha.exe
             gf2gacha.zip
-          destination-dir: ./
+          destination-dir: gf2gacha/${{ github.ref_name }}/
