--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@tailwindcss/vite": "^4.0.11",
     "element-plus": "^2.9.5",
+    "html2canvas-pro": "^1.5.8",
     "tailwindcss": "^4.0.11",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3"
