--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.11",
     "element-plus": "^2.9.5",
     "html2canvas-pro": "^1.5.8",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.0.11",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3"
