--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,24 +48,18 @@ jobs:
       - name: Zip the folder
         run: powershell Compress-Archive -Path gf2gacha -DestinationPath gf2gacha.zip
 
-      # - name: Build Changelog
-      #   run: npx changelogithub
-      #   env:
-      #     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload to R2
+        uses: ryand56/r2-upload-action@latest
         with:
-          name: gf2gacha.zip
-          path: gf2gacha.exe
+          r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
+          r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+          r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          r2-bucket: ${{ secrets.R2_BUCKET }}
+          source-dir: |
+            build/bin/gf2gacha.exe
+            gf2gacha.zip
+          destination-dir: gf2gacha/${{ github.ref_name }}/
 
-      # softprops/action-gh-release有问题（详见其Issues），暂时改用ncipollo/release-action
-      # - name: Upload Release Asset
-      #   uses: softprops/action-gh-release@v2
-      #   with:
-      #     files: |
-      #       gf2gacha.zip
-      #       gf2gacha.exe
       - name: Upload Release Asset
         uses: ncipollo/release-action@v1
         with:
@@ -73,14 +67,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
 
-      # - name: Upload to R2
-      #   uses: ryand56/r2-upload-action@latest
-      #   with:
-      #     r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
-      #     r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
-      #     r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-      #     r2-bucket: ${{ secrets.R2_BUCKET }}
-      #     source-dir: |
-      #       build/bin/gf2gacha.exe
-      #       gf2gacha.zip
-      #     destination-dir: gf2gacha/${{ github.ref_name }}/
+      - name: Build Changelog
+        run: npx changelogithub
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
