--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,23 +48,17 @@ jobs:
       - name: Zip the folder
         run: powershell Compress-Archive -Path gf2gacha -DestinationPath gf2gacha.zip
 
-#      - name: Upload to R2
-#        uses: ryand56/r2-upload-action@latest
-#        with:
-#          r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
-#          r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
-#          r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-#          r2-bucket: ${{ secrets.R2_BUCKET }}
-#          source-dir: |
-#            build/bin/gf2gacha.exe
-#            gf2gacha.zip
-#          destination-dir: gf2gacha/${{ github.ref_name }}/
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload to R2
+        uses: ryand56/r2-upload-action@latest
         with:
-          name: gf2gacha.zip
-          path: gf2gacha.exe
+          r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
+          r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+          r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          r2-bucket: ${{ secrets.R2_BUCKET }}
+          source-dir: |
+            build/bin/gf2gacha.exe
+            gf2gacha.zip
+          destination-dir: gf2gacha/${{ github.ref_name }}/
 
       - name: Upload Release Asset
         uses: ncipollo/release-action@v1
@@ -73,7 +67,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
 
-#      - name: Build Changelog
-#        run: npx changelogithub
-#        env:
-#          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Build Changelog
+        run: npx changelogithub
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
