feat: 将抓包数据保存在单独的文件中避免每次都要重新抓包 (#5)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,9 @@ jobs:
 
       - name: Build App
         working-directory: .
-        run: wails build -webview2 embed -skipbindings -o gf2gacha.exe
+        run: |
+          go generate ./...
+          wails build -webview2 embed -skipbindings -o gf2gacha.exe
 
       - name: Create folder and copy files
         run: |
@@ -59,12 +61,11 @@ jobs:
           destination-dir: gf2gacha/${{ github.ref_name }}/
 
       - name: Upload Release Asset
-        uses: softprops/action-gh-release@v2
+        uses: ncipollo/release-action@v1
         with:
-          files: |
-            gf2gacha.zip
-            gf2gacha.exe
-      
+          artifacts: "gf2gacha.zip,gf2gacha.exe"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          allowUpdates: true
 
       - name: Build Changelog
         run: npx changelogithub
