--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,8 +55,8 @@ jobs:
           path: gf2gacha.exe
 
       - name: Upload Release Asset
-        uses: ncipollo/release-action@v1
+        uses: softprops/action-gh-release@v2
         with:
-          artifacts: "gf2gacha.zip,gf2gacha.exe"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          allowUpdates: true
+          files: |
+            gf2gacha.zip
+            gf2gacha.exe
